Footer logo fix on small mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -1009,9 +1009,13 @@ table {
       display: inline-block; } }
 
 .ft-Logo {
-  position: absolute;
-  right: 0;
-  bottom: -10px; }
+  margin-top: 20px; }
+  @media only screen and (min-width: 350px) {
+    .ft-Logo {
+      margin-top: 0;
+      position: absolute;
+      right: 0;
+      bottom: -10px; } }
   @media only screen and (min-width: 768px) {
     .ft-Logo {
       margin-top: -10px;
