--- a/scss/core/_footer.scss
+++ b/scss/core/_footer.scss
@@ -93,9 +93,14 @@
 }
 
 .ft-Logo {
-  position: absolute;
-  right: 0;
-  bottom: -10px;
+  margin-top: 20px;
+
+  @include breakpoint('custom-350') {
+    margin-top: 0;
+    position: absolute;
+    right: 0;
+    bottom: -10px;
+  }
 
   @include breakpoint('sm') {
     margin-top: -10px;
